Creo la clase tipo ventana Configuracion, Modifico la clase Mensaje para que el origen pueda ser H,M,B, le añado toString(), Modifico Configuracion.xaml y Configuracion.xaml.cs para capturar los datos de configuracion, Modifico el MainWindow.xaml para incorporar las propiedades de usuario que previamewnte he creado, implemento el método de configuracion

--- a/ChatBot/App.config
+++ b/ChatBot/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ChatBot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <ChatBot.Properties.Settings>
+            <setting name="colorFondo" serializeAs="String">
+                <value>LightYellow</value>
+            </setting>
+            <setting name="sexo" serializeAs="String">
+                <value>H</value>
+            </setting>
+            <setting name="colorUsuario" serializeAs="String">
+                <value>LightGreen</value>
+            </setting>
+            <setting name="colorRobot" serializeAs="String">
+                <value>AquaMarine</value>
+            </setting>
+        </ChatBot.Properties.Settings>
+    </userSettings>
 </configuration>
