Incluyo la lógica de respuesta del Bot, modifico la gestion de propiedades de colores y sexo pero no consigo que se muestre seleccionado el valor configurado en las variables.

--- a/ChatBot/App.config
+++ b/ChatBot/App.config
@@ -1,8 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="ChatBot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ChatBot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
@@ -24,4 +27,25 @@
             </setting>
         </ChatBot.Properties.Settings>
     </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <applicationSettings>
+    <ChatBot.Properties.Settings>
+      <setting name="EndPoint" serializeAs="String">
+        <value>https://chatbotantonio.azurewebsites.net</value>
+      </setting>
+      <setting name="EndPointKey" serializeAs="String">
+        <value>84e581e5-7f70-42b7-a875-24b2f60b6d85</value>
+      </setting>
+      <setting name="KnowledgeBaseId" serializeAs="String">
+        <value>20118cf2-e3ba-4c79-8dfd-a3146bcee13b</value>
+      </setting>
+    </ChatBot.Properties.Settings>
+  </applicationSettings>
 </configuration>
