Realizo las correcciones comentadas por Javier en Clase, cambio la propiedad origen para guardar el texto completo del tipo de usuario o robot

--- a/ChatBot/App.config
+++ b/ChatBot/App.config
@@ -17,13 +17,13 @@
                 <value>LightYellow</value>
             </setting>
             <setting name="sexo" serializeAs="String">
-                <value>H</value>
+                <value>Hombre</value>
             </setting>
             <setting name="colorUsuario" serializeAs="String">
                 <value>LightGreen</value>
             </setting>
             <setting name="colorRobot" serializeAs="String">
-                <value>AquaMarine</value>
+                <value>Aquamarine</value>
             </setting>
         </ChatBot.Properties.Settings>
     </userSettings>
