--- a/ChatBot/Properties/Settings.settings
+++ b/ChatBot/Properties/Settings.settings
@@ -6,13 +6,13 @@
       <Value Profile="(Default)">LightYellow</Value>
     </Setting>
     <Setting Name="sexo" Type="System.String" Scope="User">
-      <Value Profile="(Default)">H</Value>
+      <Value Profile="(Default)">Hombre</Value>
     </Setting>
     <Setting Name="colorUsuario" Type="System.String" Scope="User">
       <Value Profile="(Default)">LightGreen</Value>
     </Setting>
     <Setting Name="colorRobot" Type="System.String" Scope="User">
-      <Value Profile="(Default)">AquaMarine</Value>
+      <Value Profile="(Default)">Aquamarine</Value>
     </Setting>
     <Setting Name="EndPoint" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https://chatbotantonio.azurewebsites.net</Value>
